added dataset table for segnet!

--- a/PFE/latex/tables/table5.tex
+++ b/PFE/latex/tables/table5.tex
@@ -1,22 +1,22 @@
 \begin{table}[H]
 \centering
+\resizebox{\textwidth}{!}{%
 \begin{tabular}{|
 >{\columncolor[HTML]{FFFFFF}}c 
 >{\columncolor[HTML]{FFFFFF}}c |
 >{\columncolor[HTML]{FFFFFF}}c |
->{\columncolor[HTML]{FFFFFF}}c 
->{\columncolor[HTML]{FFFFFF}}l 
->{\columncolor[HTML]{FFFFFF}}l |}
+>{\columncolor[HTML]{FFFFFF}}c |c|c|c|c|c|c|}
 \hline
-\multicolumn{2}{|c|}{\cellcolor[HTML]{FFFFFF}\textbf{Dataset}}                                              & \textbf{Train} & \multicolumn{3}{c|}{\cellcolor[HTML]{FFFFFF}\textbf{Test}} \\ \hline
-\multicolumn{1}{|c|}{\cellcolor[HTML]{FFFFFF}}                                             & \textbf{Image} & 10             & \multicolumn{3}{c|}{\cellcolor[HTML]{FFFFFF}3}             \\ \cline{2-6} 
-\multicolumn{1}{|c|}{\cellcolor[HTML]{FFFFFF}}                                             & \textbf{Mask}  & 10             & \multicolumn{3}{c|}{\cellcolor[HTML]{FFFFFF}3}             \\ \cline{2-6} 
-\multicolumn{1}{|c|}{\multirow{-3}{*}{\cellcolor[HTML]{FFFFFF}\textbf{Red Blood Cells}}}   & \textbf{Edge}  & 10             & \multicolumn{3}{c|}{\cellcolor[HTML]{FFFFFF}3}             \\ \hline
-\multicolumn{1}{|c|}{\cellcolor[HTML]{FFFFFF}}                                             & \textbf{Image} & 73             & \multicolumn{3}{c|}{\cellcolor[HTML]{FFFFFF}33}            \\ \cline{2-6} 
-\multicolumn{1}{|c|}{\multirow{-2}{*}{\cellcolor[HTML]{FFFFFF}\textbf{White Blood Cells}}} & \textbf{Mask}  & 73             & \multicolumn{3}{c|}{\cellcolor[HTML]{FFFFFF}33}            \\ \hline
-\multicolumn{1}{|c|}{\cellcolor[HTML]{FFFFFF}}                                             & \textbf{Image} & 71             & \multicolumn{3}{c|}{\cellcolor[HTML]{FFFFFF}31}            \\ \cline{2-6} 
-\multicolumn{1}{|c|}{\multirow{-2}{*}{\cellcolor[HTML]{FFFFFF}\textbf{Platelets}}}         & \textbf{Mask}  & 71             & \multicolumn{3}{c|}{\cellcolor[HTML]{FFFFFF}31}            \\ \hline
-\end{tabular}
+\multicolumn{2}{|c|}{\cellcolor[HTML]{FFFFFF}\textbf{Dataset}}                                              & \textbf{\begin{tabular}[c]{@{}c@{}}Train\\ images\end{tabular}} & \textbf{\begin{tabular}[c]{@{}c@{}}Test\\ images\end{tabular}} & \textbf{\begin{tabular}[c]{@{}c@{}}Train\\ Tiles\end{tabular}} & \textbf{\begin{tabular}[c]{@{}c@{}}Test\\ Tiles\end{tabular}} & \textbf{\begin{tabular}[c]{@{}c@{}}Total\\ train\\ images\end{tabular}} & \textbf{\begin{tabular}[c]{@{}c@{}}Total\\ test\\ images\end{tabular}} & \textbf{\begin{tabular}[c]{@{}c@{}}Total\\ train\\ tiles\end{tabular}} & \textbf{\begin{tabular}[c]{@{}c@{}}Total\\ test\\ tiles\end{tabular}} \\ \hline
+\multicolumn{1}{|c|}{\cellcolor[HTML]{FFFFFF}}                                             & \textbf{Image} & 10                                                              & 3                                                              & 3916                                                           & 1072                                                          &                                                                         &                                                                        &                                                                        &                                                                       \\ \cline{2-6}
+\multicolumn{1}{|c|}{\cellcolor[HTML]{FFFFFF}}                                             & \textbf{Mask}  & 10                                                              & 3                                                              & 3916                                                           & 1072                                                          &                                                                         &                                                                        &                                                                        &                                                                       \\ \cline{2-6}
+\multicolumn{1}{|c|}{\multirow{-3}{*}{\cellcolor[HTML]{FFFFFF}\textbf{Red Blood Cells}}}   & \textbf{Edge}  & 10                                                              & 3                                                              & 3916                                                           & 1072                                                          & \multirow{-3}{*}{30}                                                    & \multirow{-3}{*}{9}                                                    & \multirow{-3}{*}{\textbf{11748}}                                       & \multirow{-3}{*}{\textbf{3216}}                                       \\ \hline
+\multicolumn{1}{|c|}{\cellcolor[HTML]{FFFFFF}}                                             & \textbf{Image} & 73                                                              & 33                                                             & 28126                                                          & 15892                                                         &                                                                         &                                                                        &                                                                        &                                                                       \\ \cline{2-6}
+\multicolumn{1}{|c|}{\multirow{-2}{*}{\cellcolor[HTML]{FFFFFF}\textbf{White Blood Cells}}} & \textbf{Mask}  & 73                                                              & 33                                                             & 28126                                                          & 15892                                                         & \multirow{-2}{*}{146}                                                   & \multirow{-2}{*}{66}                                                   & \multirow{-2}{*}{\textbf{56252}}                                       & \multirow{-2}{*}{\textbf{31784}}                                      \\ \hline
+\multicolumn{1}{|c|}{\cellcolor[HTML]{FFFFFF}}                                             & \textbf{Image} & 71                                                              & 31                                                             & 27650                                                          & 14410                                                         &                                                                         &                                                                        &                                                                        &                                                                       \\ \cline{2-6}
+\multicolumn{1}{|c|}{\multirow{-2}{*}{\cellcolor[HTML]{FFFFFF}\textbf{Platelets}}}         & \textbf{Mask}  & 71                                                              & 31                                                             & 27650                                                          & 14410                                                         & \multirow{-2}{*}{142}                                                   & \multirow{-2}{*}{62}                                                   & \multirow{-2}{*}{\textbf{55300}}                                       & \multirow{-2}{*}{\textbf{28820}}                                      \\ \hline
+\end{tabular}%
+}
 \caption{Dataset used for segnet}
 \label{Dataset used for segnet}
 \end{table}
