updated table 5 Dataset used for Segnet!

--- a/PFE/latex/tables/table5.tex
+++ b/PFE/latex/tables/table5.tex
@@ -1,20 +1,21 @@
+% Please add the following required packages to your document preamble:
+% \usepackage{multirow}
+% \usepackage{graphicx}
+% \usepackage[table,xcdraw]{xcolor}
+% If you use beamer only pass "xcolor=table" option, i.e. \documentclass[xcolor=table]{beamer}
 \begin{table}[H]
 \centering
 \resizebox{\textwidth}{!}{%
-\begin{tabular}{|
->{\columncolor[HTML]{FFFFFF}}c 
->{\columncolor[HTML]{FFFFFF}}c |
->{\columncolor[HTML]{FFFFFF}}c |
->{\columncolor[HTML]{FFFFFF}}c |c|c|c|c|c|c|}
+\begin{tabular}{|cc|c|c|c|c|c|c|}
 \hline
-\multicolumn{2}{|c|}{\cellcolor[HTML]{FFFFFF}\textbf{Dataset}}                                              & \textbf{\begin{tabular}[c]{@{}c@{}}Train\\ images\end{tabular}} & \textbf{\begin{tabular}[c]{@{}c@{}}Test\\ images\end{tabular}} & \textbf{\begin{tabular}[c]{@{}c@{}}Train\\ Tiles\end{tabular}} & \textbf{\begin{tabular}[c]{@{}c@{}}Test\\ Tiles\end{tabular}} & \textbf{\begin{tabular}[c]{@{}c@{}}Total\\ train\\ images\end{tabular}} & \textbf{\begin{tabular}[c]{@{}c@{}}Total\\ test\\ images\end{tabular}} & \textbf{\begin{tabular}[c]{@{}c@{}}Total\\ train\\ tiles\end{tabular}} & \textbf{\begin{tabular}[c]{@{}c@{}}Total\\ test\\ tiles\end{tabular}} \\ \hline
-\multicolumn{1}{|c|}{\cellcolor[HTML]{FFFFFF}}                                             & \textbf{Image} & 10                                                              & 3                                                              & 3916                                                           & 1072                                                          &                                                                         &                                                                        &                                                                        &                                                                       \\ \cline{2-6}
-\multicolumn{1}{|c|}{\cellcolor[HTML]{FFFFFF}}                                             & \textbf{Mask}  & 10                                                              & 3                                                              & 3916                                                           & 1072                                                          &                                                                         &                                                                        &                                                                        &                                                                       \\ \cline{2-6}
-\multicolumn{1}{|c|}{\multirow{-3}{*}{\cellcolor[HTML]{FFFFFF}\textbf{Red Blood Cells}}}   & \textbf{Edge}  & 10                                                              & 3                                                              & 3916                                                           & 1072                                                          & \multirow{-3}{*}{30}                                                    & \multirow{-3}{*}{9}                                                    & \multirow{-3}{*}{\textbf{11748}}                                       & \multirow{-3}{*}{\textbf{3216}}                                       \\ \hline
-\multicolumn{1}{|c|}{\cellcolor[HTML]{FFFFFF}}                                             & \textbf{Image} & 73                                                              & 33                                                             & 28126                                                          & 15892                                                         &                                                                         &                                                                        &                                                                        &                                                                       \\ \cline{2-6}
-\multicolumn{1}{|c|}{\multirow{-2}{*}{\cellcolor[HTML]{FFFFFF}\textbf{White Blood Cells}}} & \textbf{Mask}  & 73                                                              & 33                                                             & 28126                                                          & 15892                                                         & \multirow{-2}{*}{146}                                                   & \multirow{-2}{*}{66}                                                   & \multirow{-2}{*}{\textbf{56252}}                                       & \multirow{-2}{*}{\textbf{31784}}                                      \\ \hline
-\multicolumn{1}{|c|}{\cellcolor[HTML]{FFFFFF}}                                             & \textbf{Image} & 71                                                              & 31                                                             & 27650                                                          & 14410                                                         &                                                                         &                                                                        &                                                                        &                                                                       \\ \cline{2-6}
-\multicolumn{1}{|c|}{\multirow{-2}{*}{\cellcolor[HTML]{FFFFFF}\textbf{Platelets}}}         & \textbf{Mask}  & 71                                                              & 31                                                             & 27650                                                          & 14410                                                         & \multirow{-2}{*}{142}                                                   & \multirow{-2}{*}{62}                                                   & \multirow{-2}{*}{\textbf{55300}}                                       & \multirow{-2}{*}{\textbf{28820}}                                      \\ \hline
+\multicolumn{2}{|c|}{{\color[HTML]{000000} \textbf{Dataset}}}                                                                     & {\color[HTML]{000000} \textbf{\begin{tabular}[c]{@{}c@{}}Train\\ images\end{tabular}}} & {\color[HTML]{000000} \textbf{\begin{tabular}[c]{@{}c@{}}Test\\ images\end{tabular}}} & {\color[HTML]{000000} \textbf{\begin{tabular}[c]{@{}c@{}}Train\\ Tiles\end{tabular}}} & {\color[HTML]{000000} \textbf{\begin{tabular}[c]{@{}c@{}}Test\\ Tiles\end{tabular}}} & {\color[HTML]{000000} \textbf{\begin{tabular}[c]{@{}c@{}}Total\\ images\end{tabular}}} & {\color[HTML]{000000} \textbf{\begin{tabular}[c]{@{}c@{}}Total\\ tiles\end{tabular}}} \\ \hline
+\multicolumn{1}{|c|}{{\color[HTML]{000000} }}                                             & {\color[HTML]{000000} \textbf{Image}} & {\color[HTML]{000000} 10}                                                              & {\color[HTML]{000000} 3}                                                              & {\color[HTML]{000000} 3916}                                                           & {\color[HTML]{000000} 1072}                                                          & {\color[HTML]{000000} 13}                                                              & {\color[HTML]{000000} \textbf{4988}}                                                  \\ \cline{2-8} 
+\multicolumn{1}{|c|}{{\color[HTML]{000000} }}                                             & {\color[HTML]{000000} \textbf{Mask}}  & {\color[HTML]{000000} 10}                                                              & {\color[HTML]{000000} 3}                                                              & {\color[HTML]{000000} 3916}                                                           & {\color[HTML]{000000} 1072}                                                          & {\color[HTML]{000000} 13}                                                              & {\color[HTML]{000000} \textbf{4988}}                                                  \\ \cline{2-8} 
+\multicolumn{1}{|c|}{\multirow{-3}{*}{{\color[HTML]{000000} \textbf{Red Blood Cells}}}}   & {\color[HTML]{000000} \textbf{Edge}}  & {\color[HTML]{000000} 10}                                                              & {\color[HTML]{000000} 3}                                                              & {\color[HTML]{000000} 3916}                                                           & {\color[HTML]{000000} 1072}                                                          & {\color[HTML]{000000} 13}                                                              & {\color[HTML]{000000} \textbf{4988}}                                                  \\ \hline
+\multicolumn{1}{|c|}{{\color[HTML]{000000} }}                                             & {\color[HTML]{000000} \textbf{Image}} & {\color[HTML]{000000} 73}                                                              & {\color[HTML]{000000} 33}                                                             & {\color[HTML]{000000} 28126}                                                          & {\color[HTML]{000000} 15892}                                                         & {\color[HTML]{000000} 106}                                                             & {\color[HTML]{000000} \textbf{44018}}                                                 \\ \cline{2-8} 
+\multicolumn{1}{|c|}{\multirow{-2}{*}{{\color[HTML]{000000} \textbf{White Blood Cells}}}} & {\color[HTML]{000000} \textbf{Mask}}  & {\color[HTML]{000000} 73}                                                              & {\color[HTML]{000000} 33}                                                             & {\color[HTML]{000000} 28126}                                                          & {\color[HTML]{000000} 15892}                                                         & {\color[HTML]{000000} 106}                                                             & {\color[HTML]{000000} \textbf{44018}}                                                 \\ \hline
+\multicolumn{1}{|c|}{{\color[HTML]{000000} }}                                             & {\color[HTML]{000000} \textbf{Image}} & {\color[HTML]{000000} 71}                                                              & {\color[HTML]{000000} 31}                                                             & {\color[HTML]{000000} 27650}                                                          & {\color[HTML]{000000} 14410}                                                         & {\color[HTML]{000000} 102}                                                             & {\color[HTML]{000000} \textbf{42060}}                                                 \\ \cline{2-8} 
+\multicolumn{1}{|c|}{\multirow{-2}{*}{{\color[HTML]{000000} \textbf{Platelets}}}}         & {\color[HTML]{000000} \textbf{Mask}}  & {\color[HTML]{000000} 71}                                                              & {\color[HTML]{000000} 31}                                                             & {\color[HTML]{000000} 27650}                                                          & {\color[HTML]{000000} 14410}                                                         & {\color[HTML]{000000} 102}                                                             & {\color[HTML]{000000} \textbf{42060}}                                                 \\ \hline
 \end{tabular}%
 }
 \caption{Dataset used for segnet}
