updated position of segnet architecture image!

--- a/PFE/latex/chap5.tex
+++ b/PFE/latex/chap5.tex
@@ -33,7 +33,7 @@ This soft-max classifies each pixel independently. The output of the soft-max cl
 
 \vspace{0.2in}
 
-\begin{figure}[h]
+\begin{figure}[H]
 \centering
   \vspace{-0.1in}
     \centerline{\includegraphics[width = 4in, height = 2.2in]{../images/segnet.png}}
