fixed chapter 5 section structure!

--- a/PFE/latex/chap5.tex
+++ b/PFE/latex/chap5.tex
@@ -71,6 +71,8 @@ The augmentation we used was custom which involves the following steps:
 \end{enumerate}
 
 \section{Counting}
+\vspace{0.2in}
+\hspace*{0.16in}
 After having segmented blood cell images (red, white blood cells and platelets), we use many postprocessing methods (machine learning algorithms) to get the coordinates of circles and count them.
 Here are all the algorithms we used to get an relatively accurate blood cell count:
 
@@ -80,9 +82,8 @@ We modified its parameters (Minimum distribution, Minimum and Maximum radius...)
 Note that we do not rely on this approach to count white blood cells, because most white blood cells have different shapes.
 Therefore, this method is useless when it comes to white blood cells counting.
 
-
-
 \section{Conclusion}
-
+\vspace{0.2in}
+\hspace*{0.16in}
 
 \newpage
