--- a/PFE/latex/chap5.tex
+++ b/PFE/latex/chap5.tex
@@ -78,7 +78,7 @@ Here are all the algorithms we used to get an relatively accurate blood cell cou
 
 \subsection{Circle Hough Transform}
 Circle Hough Transform (CHT) is machine learning algorithm used to extract features (circles) from imperfect images.
-We modified its parameters (Minimum distribution, Minimum and Maximum radius...) for each type of blood cells (red, white and platelets).
+We modified its parameters (Minimum distribution, Minimum and Maximum radius...) for each type of blood cells (red, white and platelets).\\
 Note that we do not rely on this approach to count white blood cells, because most white blood cells have different shapes.
 Therefore, this method is useless when it comes to white blood cells counting.
 
