added connected component labeling section!

--- a/PFE/latex/chap5.tex
+++ b/PFE/latex/chap5.tex
@@ -82,6 +82,9 @@ We modified its parameters (Minimum distribution, Minimum and Maximum radius...)
 Note that we do not rely on this approach to count white blood cells, because most white blood cells have different shapes.
 Therefore, this method is useless when it comes to white blood cells counting.
 
+\subsection{Connected Component Labeling}
+Connected Component Labeling (CCL) is machine learning algorithm used to detect connected regions in a binary image.
+
 \section{Conclusion}
 \vspace{0.2in}
 \hspace*{0.16in}
