updated connected component labeling!

--- a/PFE/latex/chap5.tex
+++ b/PFE/latex/chap5.tex
@@ -84,6 +84,9 @@ Therefore, this method is useless when it comes to white blood cells counting.
 
 \subsection{Connected Component Labeling}
 Connected Component Labeling (CCL) is machine learning algorithm used to detect connected regions in a binary image.
+Before applying the connected component labeling, we convert the images to grayscale. Then, a binary threshold is applied to the images to get binary values.
+Finally, we apply the connected component labeling to get the labels and map component labels to the resulting image.
+
 
 \section{Conclusion}
 \vspace{0.2in}
