--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -495,6 +495,20 @@ This thesis is presented in four chapters:\\
 
 \newpage
 
+\vspace*{\fill}
+\begin{center}
+    {\color{Black} \rule{\linewidth}{1.2mm} }\\
+\vspace{0.25in}
+{\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapter V : Experiments And Results}}}}}
+\vspace{0.35in}\\
+    {\color{Black} \rule{\linewidth}{1.2mm} }
+\end{center}
+\vspace*{\fill}
+\addcontentsline{toc}{chapter}{\color{Black}{Chapter V : Experiments And Results}}
+\setcounter{section}{0}
+
+\input{chap6.tex}
+
 \vspace*{-0.2in}
 
 \begin{center}
